# VulcanTrader

./: .gitignore  AGENTS.md  LICENSE  README.md  install.bat  install.sh  requirements.txt  run-app.bat  run-app.sh  run-live.bat  run-live.sh  run-paper.bat  run-paper.sh  run-subserver.bat  run-subserver.sh
VulcanTrader/: backtesting.py  bot.py  constants.py  data_server.py  pairs_bt_finder.py  regime_analysis.py  rust_backtest.py  rust_pairlist.py  trader_bot.py  wallets.py  web_portal.py
VulcanTrader/backtester/: Cargo.toml
VulcanTrader/backtester/src/: backtest.rs  backtest_tests.rs  cpu_engine.rs  cpu_engine_tests.rs  fast_indicators.rs  lib.rs  metrics.rs  python.rs
VulcanTrader/config/: __init__.py  config_secrets.py  config_setup.py  config_validation.py  configuration.py  deprecated_settings.py  directory_operations.py  environment_vars.py  load_config.py  timerange.py
VulcanTrader/data/: __init__.py  dataprovider.py  entryexitanalysis.py  metrics.py
VulcanTrader/enums/: __init__.py  exitchecktuple.py
VulcanTrader/exchange/: __init__.py  binance.py  binance_public_data.py  bitget.py  bitmart.py  bitpanda.py  bitunix.py  bybit.py  check_exchange.py  coinbase.py  coinex.py  common.py  cryptocom.py  drift.py  exchange.py  exchange_types.py  exchange_utils.py  exchange_utils_timeframe.py  exchange_ws.py  hitbtc.py  hyperliquid.py  kraken.py  kucoin.py  okx.py
VulcanTrader/hyperopt/: hyperopt_epoch_filters.py  hyperopt_resolver.py  hyperopt_tools.py
VulcanTrader/util/: __init__.py  (+30 more)
template/: backtester.html  exampleStyle.html  login.html  trading.html
(+97 files in other folders)
